# eternego

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SYSTEM.md  appendix.md  architecture.md  daemon.py  desktop.py  eternego.spec  heart.py  implementation.md  index.py  install.ps1  install.sh  manager.py  mkdocs.yml  pyproject.toml  service.py  test.ps1  test.py  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  release.yml  tests.yml
application/business/: __init__.py  channel.py  environment.py  gateway.py  outcome.py  persona.py  routine.py
application/core/: __init__.py  abilities.py  actions.py  agent.py  agents.py  brain.py  bus.py  channel.py  channels.py  connections.py  context.py  conversation.py  data.py  destiny.py  diary.py  dna.py  exceptions.py  external_llms.py  frontier.py  gateways.py  history.py  identity.py  instructions.py  local_inference_engine.py  local_model.py  memories.py  models.py  observations.py  pairing.py  paths.py  permissions.py  person.py  prompts.py  registry.py  skills.py  struggles.py  system.py  tools.py  transcripts.py  workspace.py
application/platform/: OS.py  __init__.py  anthropic.py  asyncio_worker.py  bip39.py  crypto.py  datetimes.py  desktop.py  discord.py  filesystem.py  git.py  http.py  hugging_face.py  keyboard.py  linux.py  lists.py  logger.py  lora.py  mac.py  objects.py  observer.py  ollama.py  openai.py  persistent_memory.py  processes.py  reflections.py  strings.py  telegram.py  tool.py  web.py  windows.py  xai.py
assets/: eternego-ascii.txt  header-ascii.txt  logo-ascii.txt  title-ascii.txt
cli/: env.py  launch.py  main.py  pair.py  service.py  uninstall.py
config/: __init__.py  application.py  finetune.py  inference.py  web.py
docs/: CNAME  index.md
docs/concepts/: index.md
docs/getting-started/: edit-her.md  index.md  install.md  read-her-files.md  talk-to-her.md  your-first-persona.md
docs/operating/: desktop-access.md  index.md
docs/reference/: index.md
installation/: install.ps1  install.sh  smoke.py
installation/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
installation/native/: AppRun  pyinstaller.spec  windows-installer.iss
installation/shells/: banner.ps1  banner.sh  copy.ps1  env.ps1  lib.ps1  lib.sh  packages.ps1  packages.sh  python.ps1  start.sh
packaging/: eternego.desktop  windows-installer.iss
prompts/: 01-character.md  02-situation.md  03-realize.md  04-understand.md  05-recognize.md  06-decide.md  07-conclude.md  08-subconscious-identity.md  09-subconscious-traits.md  10-subconscious-wishes.md  11-subconscious-struggles.md  12-subconscious-context.md  13-subconscious-dna.md  14-escalation.md
shells/: banner.ps1  banner.sh  copy.ps1  copy.sh  env.ps1  env.sh  gguf.ps1  gguf.sh  lib.ps1  lib.sh  packages.ps1  packages.sh  python.sh  service.ps1  service.sh  start.ps1  start.sh
tests/business/: environment_test.py  outcome_test.py  persona_test.py  routine_test.py
tests/core/: abilities_test.py  actions_test.py  agents_test.py  brain_data_test.py  channels_test.py  character_test.py  clock_test.py  conscious_test.py  frontier_test.py  gateways_test.py  (+9 more)
web/: app.py  health.py  requests.py  socket.py  state.py
(+533 files in other folders)
