[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eternego"
version = "0.1.0"
description = "AI personas that live on your hardware"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=12.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",
    "pywin32>=305; sys_platform == 'win32'",
]

[project.optional-dependencies]
finetune = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",  # CUDA only — enables 4-bit QLoRA; safe to install on non-CUDA
    "gguf>=0.10.0",           # required by convert_hf_to_gguf.py (llama.cpp)
    "numpy>=1.26.0",
    "sentencepiece>=0.2.0",
]

[project.scripts]
eternego = "cli.main:main"

[tool.setuptools]
py-modules = ["service", "heart"]

[tool.setuptools.packages.find]
where = ["."]
include = ["application*", "cli*", "config*", "web*"]
