[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eternego"
version = "0.1.0"
description = "AI personas that live on your hardware"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "python-multipart>=0.0.7",
    "uvicorn>=0.20.0",
    "websockets>=12.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "mss>=9.0.0",
    "pynput>=1.7.6",
    "pywin32>=305; sys_platform == 'win32'",
]

[project.optional-dependencies]
training = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",
    "gguf>=0.10.0",
    "numpy>=1.26.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.0.0",
]
# Tray-icon deps for the macOS .app and Windows .exe bundles only.
# Linux AppImage / Docker / local source dev do not need these.
bundle = [
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[project.scripts]
eternego = "index:main"

[tool.setuptools]
py-modules = ["index", "daemon", "desktop"]

[tool.setuptools.packages.find]
where = ["."]
include = ["application*", "cli*", "config*", "web*"]
